--- a/scss/components/_components.modals.scss
+++ b/scss/components/_components.modals.scss
@@ -26,7 +26,7 @@
 		display: block;
 		@include animation('fadeOut');
 
-		.c-modal__content {
+		.c-modal__container {
 			@include animation('slideOutDown');
 		}
 	}
