#42 Adjusted speed of switch component animation

--- a/scss/components/_components.switch.scss
+++ b/scss/components/_components.switch.scss
@@ -46,6 +46,6 @@
 		width: 14px;
 		border-radius: 50%;
 		box-shadow: $dropshadow--light;
-		transition: transform 0.4s;
+		transition: transform $duration;
 	}
 }
