--- a/scss/components/_components.tooltip.scss
+++ b/scss/components/_components.tooltip.scss
@@ -7,7 +7,7 @@
 	background-color: $grey-dark;
 	text-align: center;
 	font-size: $font-size-h5;
-	width: 250px;
+	max-width: 250px;
 	padding: $global-spacing-unit-tiny $global-spacing-unit-small;
 	border-radius: $border-radius;
 	z-index: $z-index-tooltip;
