--- a/style.css
+++ b/style.css
@@ -1319,7 +1319,7 @@ input[type="search"]::-webkit-search-results-decoration {
   background-color: #4d4d4d;
   text-align: center;
   font-size: 0.9rem;
-  width: 250px;
+  max-width: 250px;
   padding: 6px 12px;
   border-radius: 3px;
   z-index: 600;
