#33 Moved base form styles to elements layer

--- a/scss/components/_components.inputs.scss
+++ b/scss/components/_components.inputs.scss
@@ -6,12 +6,13 @@
 
 .c-field {
 	@include clearfix();
+	display: block;
 	margin-bottom: $global-spacing-unit;
 }
 
 
 
-// ## Labels and Typography
+// ## Labels
 // -----------------------------------------------------------------------------
 
 .c-field__label {
@@ -19,14 +20,27 @@
 	font-size: $font-size-h4;
 	font-weight: $font-weight-bold;
 	margin-bottom: 2px;
-}
 
-.c-field__label--required {
-	&:after {
-		content: "*";
-		margin-left: 2px;
+	&.is-required {
+		&:after {
+			content: "*";
+			margin-left: 2px;
+		}
 	}
 }
+
+.c-field__label--radio,
+.c-field__label--checkbox {
+	display: inline;
+	font-size: $global-font-size;
+	font-weight: $font-weight-normal;
+	margin-bottom: 0;
+}
+
+
+
+// ## Field Help Text
+// -----------------------------------------------------------------------------
 
 .c-field__help-text {
 	display: inline-block;
@@ -39,33 +53,7 @@
 // ## Text inputs
 // -----------------------------------------------------------------------------
 
-.c-input__input,
-.c-textarea__input {
-	font: inherit;
-	border: 1px solid $color-border;
-	border-radius: $border-radius;
-	width: 100%;
-	height: 32px;
-	padding: 0 0.5rem;
-	-webkit-appearance: none;
-	   -moz-appearance: none;
-
-	&:focus {
-		border-color: $color-primary;
-		box-shadow: 0 0 0 1px $color-primary;
-		outline: none;
-	}
-}
-
-.c-input__input {
-	-webkit-appearance: textfield;
-
-	&::-webkit-search-decoration {
-		-webkit-appearance: none;
-	}
-}
-
-.c-input__input--error {
+.c-input-error {
 	border-color: $color-error;
 
 	&:focus {
@@ -74,149 +62,60 @@
 	}
 }
 
-.c-input__input--disabled {
-	background-color: $grey-faint;
-}
 
 
-
-// ## Textarea
+// ## Choice List
 // -----------------------------------------------------------------------------
 
-// 1. Allow only vertical resizing of textareas
-
-.c-textarea__input {
-	display: block;
-	min-height: 80px;
-	padding: 0.3rem;
-	resize: vertical; // [1]
-}
-
-
-
-// ## Checkboxes and radio buttons
-// -----------------------------------------------------------------------------
-
-// 1. Left align multiple lines of text on a single checkbox.
-// 2. Add indication of what area of the radio or checkbox is clickable on hover.
-
-.c-radio,
-.c-checkbox {
-	display: inline-block;
-	border-radius: $border-radius;
-	padding: 2px 0 1px 24px;
-	text-indent: -20px; // [1]
-
-	&:hover {
-		background-color: $color-hover-bg; // [2]
-	}
-}
-
-.c-radio__label,
-.c-checkbox__label {
-	padding: 2px;
-}
-
-.c-radio__input,
-.c-checkbox__input {
-	position: relative;
-	top: -1px;
-	margin: 0 2px 0 0;
-
-	&:focus {
-		outline: none;
-
-		+ .c-radio__label,
-		+ .c-checkbox__label {
-			box-shadow: 0 0 0 2px $color-primary;
-		}
+.c-choices__item {
+	&:not(:last-child) {
+		margin-right: $global-spacing-unit;
 	}
 }
 
 
 
-// ### Choice List
+// ## Inline Field Labels
 // -----------------------------------------------------------------------------
 
-.c-choice-list__item {
-	margin-right: 8px;
-}
-
-
-
-// ## Select Input
-// -----------------------------------------------------------------------------
-
-.c-select__input {
-	background-color: transparent;
-	background-position: center right;
-	background-repeat: no-repeat;
-	background-image: url("images/select-arrow.svg");
-	background-size: 30px 30px;
-	border: 1px solid $color-border;
-	border-radius: $border-radius;
-	box-shadow: none;
-	font-size: inherit;
-	text-overflow: ellipsis;
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	height: 32px;
-	white-space: nowrap;
-	overflow: hidden;
-	-webkit-appearance: none;
-	   -moz-appearance: none;
-	-webkit-user-select: none;
-	   -moz-user-select: none;
-	-webkit-padding-start: 0.5rem;
-	   -moz-padding-start: 0.5rem;
-	-webkit-padding-end: 40px;
-	   -moz-padding-end: 40px;
-
-	&::-ms-expand {
-		display: none;
-	}
-
-	&:focus {
-		border-color: $color-primary;
-		box-shadow: 0 0 0 1px $color-primary;
-		outline: none;
-	}
-}
-
-
-
-// ## Additional
-// -----------------------------------------------------------------------------
+$label-width: 120px;
 
 .c-field--inline {
-	@include clearfix();
+	margin-bottom: $global-spacing-unit-small;
 
-	.c-field {
-		margin-bottom: $global-spacing-unit-small;
+	[type="text"],
+	[type="password"],
+	[type="search"],
+	[type="email"],
+	[type="tel"],
+	[type="url"],
+	[type="number"],
+	[type="date"],
+	[type="week"],
+	[type="month"],
+	[type="datetime-local"],
+	[type="color"]
+	[type="range"],
+	textarea,
+	select {
+		float: left;
+		width: calc(100% - #{$label-width});
 	}
 
 	.c-field__label {
-		position: relative;
-		top: 7px;
 		float: left;
-		width: 120px;
+		width: $label-width;
 		padding-right: 10px;
 	}
 
-	.c-choice-list .c-field__label {
-		top: 2px;
+	.c-field__label--radio,
+	.c-field__label--checkbox {
+		float: none;
+		width: auto;
+		padding-right: 0;
 	}
 
-	.c-input__input,
-	.c-textarea__input,
-	.c-select__input {
-		float: left;
-		width: calc(100% - 120px);
-	}
-
-	.c-choice-list__choices,
 	.c-field__help-text {
-		margin-left: 120px;
+		margin-left: $label-width;
 	}
 }
