--- a/scss/elements/_elements.forms.scss
+++ b/scss/elements/_elements.forms.scss
@@ -1,19 +1,205 @@
 // # Elements: Forms
 // -----------------------------------------------------------------------------
 
-button,
-input {
+button {
 	&:focus {
-		outline: none;
 		box-shadow: 0 0 0 2px $color-primary;
+		outline: none;
 	}
 }
 
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
-	display: none;
+[type="text"],
+[type="password"],
+[type="search"],
+[type="email"],
+[type="tel"],
+[type="url"],
+[type="number"],
+[type="date"],
+[type="week"],
+[type="month"],
+[type="datetime-local"],
+[type="color"],
+textarea,
+select {
+	font: inherit;
+	background-color: #fff;
+	border: 1px solid $color-border;
+	border-radius: $border-radius;
+	width: 100%;
+	height: 32px;
+	margin: 0;
+	padding: 0 $global-spacing-unit-tiny;
+	-webkit-appearance: none;
+	   -moz-appearance: none;
+
+	&:focus {
+		border-color: $color-primary;
+		box-shadow: 0 0 0 1px $color-primary;
+		outline: none;
+	}
+}
+
+
+
+// ## Search Input
+// -----------------------------------------------------------------------------
+
+[type="search"] {
+	&::-webkit-search-decoration {
+		-webkit-appearance: none;
+	}
+
+	&::-webkit-search-decoration,
+	&::-webkit-search-cancel-button,
+	&::-webkit-search-results-button,
+	&::-webkit-search-results-decoration {
+		display: none;
+	}
+}
+
+
+
+// ## Textarea
+// -----------------------------------------------------------------------------
+
+textarea {
+	display: block;
+	height: auto;
+	min-height: 80px;
+	padding-top: $global-spacing-unit-tiny;
+	padding-bottom: $global-spacing-unit-tiny;
+	resize: vertical; // [1]
+}
+
+
+
+// ## Select Input
+// -----------------------------------------------------------------------------
+
+select {
+	background-image: url("images/select-arrow.svg");
+	background-position: center right;
+	background-repeat: no-repeat;
+	background-size: 30px 30px;
+	box-shadow: none;
+	padding: 0;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	-webkit-appearance: none;
+	   -moz-appearance: none;
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+	-webkit-padding-start: $global-spacing-unit-tiny;
+	   -moz-padding-start: $global-spacing-unit-tiny;
+	-webkit-padding-end: 40px;
+	   -moz-padding-end: 40px;
+
+	&::-ms-expand {
+		display: none;
+	}
+}
+
+
+
+// Checkboxes and Radio Buttons
+// -----------------------------------------------------------------------------
+
+[type="radio"],
+[type="checkbox"] {
+	position: relative;
+	top: -1px;
+	margin: 0 4px 0 0;
+}
+
+
+
+// ## Range Input
+// -----------------------------------------------------------------------------
+
+@mixin range-track {
+	background-color: $grey-light;
+	border: none;
+	border-radius: 4px;
+	width: 100%;
+	height: 8px;
+	box-shadow: $dropshadow--inset;
+	cursor: pointer;
+}
+
+@mixin range-thumb {
+	background-color: $color-primary;
+	height: 20px;
+	width: 20px;
+	margin-top: -6px;
+	border: none;
+	border-radius: 50%;
+	box-shadow: $dropshadow--light;
+	cursor: pointer;
+	-webkit-appearance: none;
+}
+
+@mixin range-focus {
+	box-shadow: inset 0 0 0 1px #fff, 0 0 0 2px $color-primary;
+}
+
+[type="range"] {
+	margin: 0;
+	width: 100%;
+	-webkit-appearance: none;
+
+	&:focus {
+		outline: 0;
+
+		&::-webkit-slider-runnable-track {
+			@include range-focus;
+		}
+
+		&::-moz-range-track {
+			@include range-focus;
+		}
+
+		&::-ms-fill-lower {
+			@include range-focus;
+		}
+
+		&::-ms-fill-upper {
+			@include range-focus;
+		}
+	}
+
+	&::-webkit-slider-runnable-track {
+		@include range-track;
+	}
+
+	&::-webkit-slider-thumb {
+		@include range-thumb;
+	}
+
+	&::-moz-range-track {
+		@include range-track;
+	}
+
+	&::-moz-range-thumb {
+		@include range-thumb;
+	}
+
+	&::-ms-track {
+		@include range-track;
+	}
+
+	&::-ms-fill-lower {
+		@includerange- track;
+	}
+
+	&::-ms-fill-upper {
+		@include range-track;
+	}
+
+	&::-ms-thumb {
+		@include range-thumb;
+	}
 }
 
 
@@ -24,7 +210,6 @@ input[type="search"]::-webkit-search-results-decoration {
 [disabled] {
 	opacity: 0.4;
 	pointer-events: none;
-	cursor: not-allowed;
+	background-color: $grey-faint;
 	box-shadow: none;
 }
-
