--- a/scss/components/_components.switch.scss
+++ b/scss/components/_components.switch.scss
@@ -13,7 +13,8 @@
 		}
 
 		+ .c-switch__slider:before {
-			@include translateX(12px);
+			background-image: url("images/icons/check-small.svg");
+			@include translateX(14px);
 		}
 	}
 
@@ -22,28 +23,36 @@
 	}
 }
 
+// 1. Center the switch input vertically with the switch label.
+// 2. Border radius is half the height of the switch input.
+// 3. Offset the switch handle inside the slider track.
+
 .c-switch__slider {
 	display: inline-block;
 	position: relative;
-	top: 3px;
+	top: 5px; // [1]
 	cursor: pointer;
 	background-color: $grey;
-	width: 28px;
-	height: 16px;
+	width: 34px;
+	height: 20px;
 	margin-right: 4px;
-	border-radius: 8px;
+	border-radius: 10px; // [2]
 	box-shadow: $dropshadow--inset;
-	transition: background-color 0.4s;
+	transition: background-color $duration;
 	overflow: hidden;
 
 	&:before {
 		content: "";
 		position: absolute;
-		top: 1px;
-		left: 1px;
+		top: 2px; // [3]
+		left: 2px; // [3]
 		background-color: #fff;
-		height: 14px;
-		width: 14px;
+		background-image: url("images/icons/close-small.svg");
+		background-position: center center;
+		background-size: 7px 7px;
+		background-repeat: no-repeat;
+		height: 16px;
+		width: 16px;
 		border-radius: 50%;
 		box-shadow: $dropshadow--light;
 		transition: transform $duration;
