--- a/scss/elements/_elements.forms.scss
+++ b/scss/elements/_elements.forms.scss
@@ -119,7 +119,7 @@ select {
 // -----------------------------------------------------------------------------
 
 @mixin range-track {
-	background-color: $grey-light;
+	background-color: $grey-faint;
 	border: none;
 	border-radius: 4px;
 	width: 100%;
