--- a/scss/generic/_generic.shared.scss
+++ b/scss/generic/_generic.shared.scss
@@ -11,7 +11,6 @@ h1, h2, h3, h4, h5, h6,
 blockquote, p, pre,
 dl, ol, ul,
 figure,
-hr,
-form {
+hr {
 	margin-bottom: $global-spacing-unit-small;
 }
