#58 Added disabled state to checkboxes and radios

--- a/scss/components/_components.inputs.scss
+++ b/scss/components/_components.inputs.scss
@@ -64,6 +64,18 @@
 
 
 
+// ## Checkboxes and Radio Buttons
+// -----------------------------------------------------------------------------
+
+[disabled] {
+	~ .c-field__label--radio,
+	~ .c-field__label--checkbox {
+		opacity: 0.4;
+	}
+}
+
+
+
 // ## Choice List
 // -----------------------------------------------------------------------------
 
