#60 Changed help-text classname to just field text

--- a/scss/components/_components.inputs.scss
+++ b/scss/components/_components.inputs.scss
@@ -42,7 +42,7 @@
 // ## Field Help Text
 // -----------------------------------------------------------------------------
 
-.c-field__help-text {
+.c-field__text {
 	display: inline-block;
 	font-size: $font-size-h6;
 	margin-bottom: 0;
@@ -127,7 +127,7 @@ $label-width: 120px;
 		padding-right: 0;
 	}
 
-	.c-field__help-text {
+	.c-field__text {
 		margin-left: $label-width;
 	}
 }
