--- a/style.css
+++ b/style.css
@@ -1673,6 +1673,10 @@ select::-ms-expand {
   text-overflow: ellipsis !important;
 }
 
+.u-text-monospace {
+  font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace !important;
+}
+
 .u-text-small {
   font-size: 0.85rem !important;
 }
