--- a/style.scss
+++ b/style.scss
@@ -46,7 +46,7 @@
 @import "scss/objects/objects.flag";
 @import "scss/objects/objects.input-bare";
 @import "scss/objects/objects.island";
-@import "scss/objects/objects.layout";
+@import "scss/objects/objects.grid";
 @import "scss/objects/objects.list-bare";
 @import "scss/objects/objects.list-inline";
 @import "scss/objects/objects.media";
