--- a/style.scss
+++ b/style.scss
@@ -59,14 +59,15 @@
 @import "scss/components/components.alerts";
 @import "scss/components/components.buttons";
 @import "scss/components/components.dropdown";
+@import "scss/components/components.headers";
 @import "scss/components/components.inputs";
 @import "scss/components/components.list-link";
 @import "scss/components/components.modals";
-@import "scss/components/components.navigation";
 @import "scss/components/components.pagination";
 @import "scss/components/components.progress";
 @import "scss/components/components.switch";
 @import "scss/components/components.tables";
+@import "scss/components/components.tabs";
 @import "scss/components/components.tooltip";
 
 
