--- a/scss/elements/_elements.links.scss
+++ b/scss/elements/_elements.links.scss
@@ -7,7 +7,7 @@ a {
 
 	&:focus {
 		outline: none;
-		box-shadow: 0 0 0 2px $color-primary;
+		box-shadow: 0 0 0 2px currentColor;
 	}
 
 	&:hover {
